--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "wikitime",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "node src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "set NODE_ENV=test&& jasmine",
+    "start": "node src/server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,28 @@
   "bugs": {
     "url": "https://github.com/flowingcreyes/wikitime-node/issues"
   },
-  "homepage": "https://github.com/flowingcreyes/wikitime-node#readme"
+  "homepage": "https://github.com/flowingcreyes/wikitime-node#readme",
+  "devDependencies": {
+    "faker": "^4.1.0",
+    "jasmine": "^3.5.0",
+    "request": "^2.88.0"
+  },
+  "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.0.1",
+    "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.0",
+    "express-validator": "^6.3.1",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "pg": "^7.17.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.3",
+    "sequelize-cli": "^5.5.1"
+  }
 }
