sign up and refactor

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "faker": "^4.1.0",
     "jasmine": "^3.5.0",
+    "nodemon": "^2.0.2",
     "request": "^2.88.0"
   },
   "dependencies": {
@@ -31,7 +32,7 @@
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.0",
-    "express-validator": "^6.3.1",
+    "express-validator": "^5.3.1",
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
