--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pg": "^7.17.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "stripe": "^8.0.0"
   }
 }
