--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -18,13 +18,12 @@
 
   },
   "production": {
-    "username": "postgres",
-    "password": "bloc98",
+    "username": "root",
+    "password": "null",
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "postgres",
     "logging": false,
     "use_env_variable": "DATABASE_URL"
-
   }
 }
