--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.0",
     "express-validator": "^5.3.1",
+    "markdown": "^0.5.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
